# auto-trade-docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: ExtendedClient.py  main.py  settings.py
src/powershell/: auto-trade.ps1
