[tool.poetry]
name = "auto-trade-docker"
version = "0.1.0"
description = ""
authors = ["sabarasaraba <sabarasaraba@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-binance = "^1.0.10"
python-dotenv = "^0.17.1"
line-bot-sdk = "^1.19.0"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
